tests/negative/module/Int.orng
// Int.orng:1:1: error: redefinition of symbol `Int`
// ^
// 
